objects/Related_Parties__c.object
<CustomObject>
    <fields>
        <fullName>Blueprint_Modifier_Name__c</fullName>
        <label>Blueprint Modifier Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entities__c</fullName>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Related Parties</relationshipLabel>
        <relationshipName>Related_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_3_Ownership__c</fullName>
        <label>Member 3 Ownership %</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_4_Ownership__c</fullName>
        <label>Member 4 Ownership %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_One_Ownership_Percentage__c</fullName>
        <label>Member 1 Ownership %</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_Two_Ownership_Percentage__c</fullName>
        <label>Member 2 Ownership %</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_State_1__c</fullName>
        <label>Organization State 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_State_2__c</fullName>
        <label>Organization State 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_State_3__c</fullName>
        <label>Organization State 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_State__c</fullName>
        <label>Organization State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_1st_Manager_Name__c</fullName>
        <label>Other 1st Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_1st_Member_Name__c</fullName>
        <label>Other 1st Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_2nd_Manager_Name__c</fullName>
        <label>Other 2nd Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_2nd_Member_Name__c</fullName>
        <label>Other 2nd Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_3rd_Member_Name__c</fullName>
        <label>Other 3rd Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_4th_Member_Name__c</fullName>
        <label>Other 4th Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Entity_Manager_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Entity Manager 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Entity_Manager_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other_Entity_Manager_2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Entity_Member_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other_Entity_Member_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Entity_Member_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Entity Member 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Entity_Member_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Entity Member 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signor_Title_1__c</fullName>
        <label>Signor Title 1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signor_Title_2__c</fullName>
        <label>Signor Title 2</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signor_Title_3__c</fullName>
        <label>Signor Title 3</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signor_of_Entity_Member_1__c</fullName>
        <label>Signor of Entity Member 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signor_of_Entity_Member_2__c</fullName>
        <label>Signor of Entity Member 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signor_of_Entity_Member_3__c</fullName>
        <label>Signor of Entity Member 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Related Parties</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Related Parties Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>